feat(cli-login): added step to fetch or create account after accesstoken retrieved
